# rdd-web

./: README.md
examples/: Cargo.toml
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/hello/src/controller/: admin_user_controller.rs  index_controller.rs  mod.rs  user_controller.rs
examples/hello/src/middleware/: auth.rs  logger.rs  mod.rs
examples/hello/src/model/: user.rs
examples/hello/src/router/: admin_user_router.rs  index_router.rs  mod.rs  route.rs  user_router.rs
examples/hello/src/service/: mod.rs  user_service.rs
rdd-web/: Cargo.toml
rdd-web/src/: lib.rs
rdd-web/src/context/: comtext.rs  defer.rs  header.rs  mod.rs  param.rs  query.rs
rdd-web/src/middleware/: recovery.rs
rdd-web/src/router/: handler.rs  mod.rs  router.rs  router_group.rs  trie.rs  utils.rs
rdd-web/src/server/: engin.rs  mod.rs  server.rs
