[package]
name = "tiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14", features = ["full"]}
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4.17"
