[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tiny = {path="../../rdd-web"}
tokio = { version = "1", features = ["full"]}
env_logger = "0.10.2"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
